direct link to my own profile

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Portfolio</title>
+	<title>Portfolio Dicky-GNSSEng</title>
 	<!-- css files -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
 	<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
-	<meta name="author" content="Hassan Ali">
+	<meta name="author" content="Dicky Adhitya">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 	<body>
@@ -17,19 +17,19 @@
 			<!-- This "nav-menu" is hidden on mobile -->
 			<!-- Add the modifier "is-active" to display it on mobile -->
 			<div class="nav-left">
-				<a href="http://medium.com/@hassanhelfi/" class="nav-item">
+				<a href="https://www.linkedin.com/in/dicky-adhitya-dwiantoro/" class="nav-item">
 					<span class="icon">
-						<i class="fa fa-medium"></i>
+						<i class="fa fa-linkedin"></i>
 					</span>
 				</a>
-				<a href="http://github.com/helfi92" class="nav-item">
+				<a href="https://github.com/adhityadwi" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-github"></i>
 					</span>
 				</a>
-				<a href="https://twitter.com/hassanhelfi" class="nav-item">
+				<a href="https://www.facebook.com/dckyadhtya" class="nav-item">
 					<span class="icon">
-						<i class="fa fa-twitter"></i>
+						<i class="fa fa-facebook"></i>
 					</span>
 				</a>				
 			</div>
@@ -53,7 +53,7 @@
 		<section id="about" class="section section-1">
 			<div class="container has-text-centered">
 				<!-- Source: https://flic.kr/p/pAZBNK -->
-				<img class="avatar" src="assets/img/profile.png">
+				<img class="avatar" src="assets/img/Profpic.jpg">
 			</div>
 			<div class="container"></br>
 				<p class="intro">
@@ -112,14 +112,14 @@
 		<section id="social" class="section section-3">
 			<div class="container">
 				<div class="has-text-centered">					
-					<h3 class="title is-3">Let's Socialize</h3>
+					<h3 class="title is-3">Follow me on: </h3>
 				</div>
 				<div class="social-container columns">
 					<div class="column is-6 has-text-centered">
 						<a target="_blank" href="https://www.linkedin.com/in/dicky-adhitya-dwiantoro/"><img class="" src="assets/img/linkedin.png"></a>
 					</div>
 					<div class="column is-6 has-text-centered">
-						<a target="_blank" href="https://www.facebook.com/Hassan.Helfi"><img class="" src="assets/img/facebook.png"></a>
+						<a target="_blank" href="https://www.facebook.com/dckyadhtya"><img class="" src="assets/img/facebook.png"></a>
 					</div>
 				</div>
 			</div>
@@ -127,7 +127,7 @@
 		
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<a href="http://www.hassanali.me/about">Hassan Ali</a>
+			<a>Dicky Adhitya D</a>
 		</section>
 		
 		<!-- Scripts  -->
