--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<div class="nav-right nav-menu">
 				<a class="nav-item" href="#about">About</a>
 				<a class="nav-item" href="#projects">Projects</a>
-				<a class="nav-item" href="#social">Social</a>
+				<a class="nav-item" href="https://drive.google.com/file/d/1j_lGMNqMRCcQV4uQ0agfBHuAYPdpNrWX/view?usp=sharing">Curriculum Vitae</a>
 			</div>
 
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
@@ -106,28 +106,11 @@
 					</div>
 				</div>
 			</div>
-		</section>
-
-		<!-- Social -->
-		<section id="social" class="section section-3">
-			<div class="container">
-				<div class="has-text-centered">					
-					<h3 class="title is-3">Follow me on: </h3>
-				</div>
-				<div class="social-container columns">
-					<div class="column is-6 has-text-centered">
-						<a target="_blank" href="https://www.linkedin.com/in/dicky-adhitya-dwiantoro/"><img class="" src="assets/img/linkedin.png"></a>
-					</div>
-					<div class="column is-6 has-text-centered">
-						<a target="_blank" href="https://www.facebook.com/dckyadhtya"><img class="" src="assets/img/facebook.png"></a>
-					</div>
-				</div>
-			</div>
 		</section>	
 		
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<a href="https://drive.google.com/file/d/1j_lGMNqMRCcQV4uQ0agfBHuAYPdpNrWX/view?usp=sharing">Dicky Adhitya D</a>
+			<a>Dicky Adhitya D</a>
 		</section>
 		
 		<!-- Scripts  -->
