--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					<beta>a recent graduate of GNSS with a passion of improving everyone's life with satellite navigation application<beta>
+					[beta]a recent graduate of GNSS with a passion of improving everyone's life with satellite navigation application[beta]
 				</p>
 			</div>
 		</section>
