--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 			<div class="nav-right nav-menu">
 				<a class="nav-item" href="#about">About</a>
-				<a class="nav-item" href="#projects">Projects</a>
+				<a class="nav-item" href="#projects1">Projects</a>
 				<a class="nav-item" href="https://drive.google.com/file/d/1j_lGMNqMRCcQV4uQ0agfBHuAYPdpNrWX/view?usp=sharing">Curriculum Vitae</a>
 			</div>
 
@@ -62,11 +62,13 @@
 			</div>
 		</section>
 		
-		<!-- Projects -->
-		<section  id="projects" class="section section-2">
+		<!-- Projects--><!-- Projects--><!-- Projects--><!-- Projects--><!-- Projects-->
+	
+		<!-- GNSS Projects-->
+		<section  id="projects1" class="section section-2">
 			<div class="container">
 				<div class="has-text-centered">
-					<h3 class="title is-3">Projects</h3>
+					<h3 class="title is-3">GNSS Projects</h3>
 				</div>
 				
 				<div class="columns is-multiline is-desktop">
@@ -106,7 +108,53 @@
 					</div>
 				</div>
 			</div>
-		</section>	
+		</section>
+		
+		<!-- Other Projects -->
+		<section  id="projects" class="section section-2">
+			<div class="container">
+				<div class="has-text-centered">
+					<h3 class="title is-3">Other Projects</h3>
+				</div>
+				
+				<div class="columns is-multiline is-desktop">
+					<!-- Project 1 -->
+					<div class="column">
+						<div class="box project-text">
+							<article>
+								<div>
+									<figure class="image project-figure">
+										<img src="assets/img/project-1.jpg" alt="Image">
+									</figure>
+								</div>
+								<div>			
+									<p>
+										They don’t want us to eat. I told you all this before, when you have a swimming pool, do not use chlorine, use salt water, the healing, salt water is the healing.
+									</p>
+								</div>
+							</article>
+						</div>
+					</div>
+					<!-- Project 2 -->
+					<div class="column">
+						<div class="box project-text">
+							<article>
+								<div>
+									<figure class="image project-figure">
+										<img src="assets/img/project-2.jpg" alt="Image">
+									</figure>
+								</div>
+								<div>			
+									<p>
+										Bless up. Another one. How’s business? Boomin. Don’t ever play yourself. Life is what you make it, so let’s make it.
+									</p>
+								</div>
+							</article>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
