--- a/index.html
+++ b/index.html
@@ -145,12 +145,14 @@
 							<article>
 								<div>
 									<figure class="image project-figure">
-										<img src="assets/img/project-2.jpg" alt="Image">
+										<img src="https://drive.google.com/open?id=1ta8PtnHJlVK2SXy-l7b0g3tvVuElf0Ie" alt="Image">
 									</figure>
 								</div>
 								<div>			
 									<p>
-										Bless up. Another one. How’s business? Boomin. Don’t ever play yourself. Life is what you make it, so let’s make it.
+									   [Project: Joint Research Functional Endoscopic Sinus Surgery Simulator - University of Indonesia, Bandung Insititute of Technology and University of North Carolina]<br>
+									   We designed an augmented reality with the integration of KINECT and game engine UNITY3d to help ENT (Ear, Nose, and Throat) Specialists practice their surgical technique.
+									   
 									</p>
 								</div>
 							</article>
