fix error image

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 							<article>
 								<div>
 									<figure class="image project-figure">
-										<img src="https://drive.google.com/host/1ta8PtnHJlVK2SXy-l7b0g3tvVuElf0Ie" alt="Image">
+										<img src="https://drive.google.com/open?id=1ta8PtnHJlVK2SXy-l7b0g3tvVuElf0Ie" alt="Image">
 									</figure>
 								</div>
 								<div>			
