--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
-	<link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="assets/img/favicon-32x32.png">
 	<meta name="author" content="Dicky Adhitya">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
