change size picture other projects 2

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 							<article>
 								<div>
 									<figure class="image project-figure">
-										<img width="356" src="https://drive.google.com/uc?id=1ta8PtnHJlVK2SXy-l7b0g3tvVuElf0Ie" alt="Image">
+										<img width="300" height="256" src="https://drive.google.com/uc?id=1ta8PtnHJlVK2SXy-l7b0g3tvVuElf0Ie" alt="Image">
 									</figure>
 								</div>
 								<div>			
