change font section 1

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 				<img class="avatar" src="assets/img/Profpic.jpg">
 			</div>
 			<div class="container"></br>
-				<p class="intro">
+				<a class="intro">
 					[beta]a recent graduate of GNSS with a passion of improving everyone's life with satellite navigation application[beta]
-				</p>
+				</a>
 			</div>
 		</section>
 		
